# Teaching-Crew

./: .env  content.md  pyproject.toml  requirements.txt
src/pr1/: main.py
src/pr1/crews/teaching_crew/: teaching_crew.py
src/pr1/crews/teaching_crew/config/: agents.yaml  task.yaml
