[project]
name = "pr1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hasnainbusiness204@gmail.com", email = "163559600+Hasnain-Software-Developer@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "fpdf>=1.7.2",
    "streamlit>=1.42.2",
]

[project.scripts]
pr1 = "pr1:main"
hasnain = "pr1.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
